style.css
/* ... */
.col.share {
  padding-left: 0;
}

/* 2. 12 Column Grid 850px - 1499px */

@media screen and (min-width: 850px) {

  .col, header, .content, .post-icon, .main, .col.share {
    margin-left:0%;
    padding:0 0.9%;
  }

  header, .content, .post-icon, .main {
    border:0px solid rgba(0,0,0,0);
    float:left;
    box-sizing:border-box;
    background-clip:padding-box !important;
  }

  .pagination.row, .footer.row {
    margin-left: 44.76%;
  }

  .row .pagination.row {
    margin-left: 0;
  }

  .row .col:first-child {
    margin-left:0;
  }

  .span_1 {
    width:8.33333333333%;
  }
  .span_2, .post-icon {
    width:16.6666666667%;
  }
  .span_3 {
    width:25.0%;
  }
  .span_4, header{
    width:33.3333333333%;
  }
  .span_5 {
    width:41.6666666667%;
  }
  .span_6 {
    width:50.0%;
  }
  .span_7 {
    width:58.3333333333%;
  }
  .span_8, .content, .main {
    width:66.6666666667%;
  }
  .span_9 {
    width:75.0%;
  }
  .span_10 {
    width:83.3333333333%;
  }
  .span_11 {
    width:91.6666666667%;
  }
  .span_12, article {
    margin-left:0;
    width:100%;
  }

  .pagination .main, .footer .main {
    width:78%;
  }
  .row .pagination .main {
    width: 100%;
  }

  .content {
    margin-left: 33%;
  }
}

/* 3. 12 Column Grid 1500px - Infinity */

@media screen and (min-width: 1500px) {

  .col, .content, .post-icon, .main, .col.share {
    padding:0 0.8%;
  }
  .col, .post-icon, .main, .col.share {
    margin-left:0%;
  }
  .content, .main {
    width: 57%;
  }
  .post-icon {
    width: 14.25%;
  }
  header {
    top: 0;
    left: 20%;
  }
  .content {
    margin-left: 53%;
  }
  .pagination.row, .footer.row {
    margin-left: 61.76%;
  }
  .pagination .main, .footer .main {
    width:82.3%;
  }
  /* Always display drawer open in large layout */
  .pure-toggle-label {
    display: none;
  }
  .pure-drawer {
    padding-top: 1rem;
    visibility: visible;
    position: fixed;
    width: 20%;
    top: 0;
    left: 0;
    z-index: 10;
  }
  [data-effect=pure-effect-3] .pure-drawer[data-position=left] {
    -webkit-transform: none;
    transform: none;
  }
  .pure-pusher {
    -webkit-transform: none;
    transform: none;
  }
  .pure-overlay {
    display: none;
  }
  /* Always display drawer open in large layout end */
}
/* Grid end */


/* Social sharing toggle */
.social-share {
  display: inline-block;
  position: relative;
}
.icon-share {
  cursor: pointer;
}
.social-share-toggle {
  display: none;
}
.social-share-buttons {
  display: none;
  position: absolute;
  top: 1.5rem;
  z-index: 10;
  width: 9rem;
  padding: 0.5rem;
}
.social-share-buttons a {
  text-decoration: none;
}
.social-share-toggle:checked ~ .social-share-buttons {
  display: flex;
  justify-content: space-around;
}
/* End social sharing toggle */

/* Header styles */
header {
  position: relative;
  overflow: hidden;
  height: 15rem;
}

.info-container {
  position: absolute;
  bottom: 0;
  padding-bottom: 2.5rem;
  width: 100%;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}
.info {
  background: rgba(0,0,0,0.5);
  padding: 1rem;
  display: inline-block;
  width: 80%;
  text-align: center;
  color: white;
}
.info a {
  color: white;
  text-decoration: none;
}
.info h1 {
  margin: 0;
}
.avatar {
  display: none;
  border-radius: 50%;
  width: 100px;
}

@media screen and (min-width: 850px) {
  header {
    position: fixed;
    top: 0;
  }
  .info-container {
    width: 94.6%;
  }
}
@media screen and (min-width: 1500px) {
  .info-container {
    /* todo: fix this value to fit inside the header */
    width: 98.4%;
  }
}
@media screen and (min-width: 850px) {
  .avatar {
    display: inline-block;
  }
}
/* Header styles end */

/* Font styles */
html {
  font-size: 20px;
}
.tagline {
  font-size: 1.3rem;
}
i, em {
  font-style: italic;
}
h1 {
  font-size: 2rem;
}
h3 {
  font-size: 1.2rem;
}
h3 a {
  text-decoration: none;
}
article, aside {
  line-height: 1.45;
}
.dsq-comment-count {
  text-transform: uppercase;
  text-decoration: none;
}
[class^="icon-"], [class*=" icon-"] {
  text-decoration: none;
}
/* Font styles end */

.comments-link {
  text-align: right;
}
img, .tumblr_audio_player {
  max-width: 100%;
}
/* Responsive video embeds */
.video {
  position: relative;
  padding-bottom: 56.25%;
  height: 0;
}
.video iframe {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

aside {
  padding: 1rem 0 0.5rem;
}
.author-avatar, .asker-avatar {
  vertical-align: middle;
  border-radius: 50%;
}
.authorship p {
  position: relative;
  top: 0.1rem;
}
.authorship a {
  text-decoration: none;
}
.post-icon {
  margin: 2rem auto 0.5rem;
  text-align: center;
  display: block;
}
a.link {
  text-decoration: none;
  padding: 0.75rem 2.5rem 0.75rem 1rem;
  display: block;
  position: relative;
}
a.link:after {
  content:">";
  position: absolute;
  right: 1.5rem;
  top: 50%;
  transform: translateY(-50%);
}
pre {
  background: #fff;
  padding: 0.5rem;
}
input[type=search] {
  box-sizing: border-box;
  border-radius: 25px;
  color: #000;
  border: 0;
  box-shadow: none;
  padding: 0.1rem 0.75rem 0.1rem 1.75rem;
  width: 100%;
}
[type=search]:focus {
  outline: 0;
}
#search-form {
  position: relative;
  margin-bottom: 1rem;
}
#search-form .icon-search {
  position: absolute;
  left: 0.5rem;
  top: 0.2rem;
  color: #000;
}

/* Pure Drawer custom styles */
.pure-drawer p {
  margin: 2rem 0;
}
hr {
  width: 100%;
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #595958;
  margin: 1rem 0;
  padding: 0;
}
nav ul {
  list-style: none;
  margin: 0;
  padding-left: 0;
}
nav a {
  color: #fff;
  text-decoration: none;
  text-transform: uppercase;
}
nav li {
  margin-top: 1em;
}
nav li:first-of-type {
  margin-top: 0;
}
/* Pure Drawer custom styles end */

/* Post styles */
.share > a:link, .share > div {
  margin-left: 1rem;
  text-decoration: none;
}
/* ... */

